Refatoração do projeto e adição do middleware de autenticação
